frontend/k8s/notls/web-ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: $NAMESPACE
  name: $INGRESS
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  #### BIND TO NGINX FROM: https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.0/deploy/static/provider/cloud/deploy.yaml
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - $INGRESS_HOST
  #     secretName: $TLS_SECRET
  rules:
    - host: $INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $SERVICE
                port:
                  # number: $SSL_PORT
                  # number: $HTTP_PORT
                  number: $INGRESS_PORT
